# poolparty-x16r

./: .gitignore  DOCKER  Dockerfile  Makefile.am  README.md  README.txt  api.cpp  bench.cpp  build-bench.sh  build-docker-bench.sh  build-docker-local.sh  build-docker-public.sh  build-docker-test.sh  build-local.sh  build.sh  ccminer.cpp  ccminer.vcxproj  ccminer.vcxproj.filters  configure-bench.sh  configure-local.sh  configure.ac  configure.sh  cuda.cpp  cuda_checkhash.cu  cuda_helper.h  cuda_helper_alexis.h  cuda_vectors.h  cuda_vectors_alexis.h  cuda_vectors_alexis2.h  donate.h  miner.h  nvml.cpp  nvml.h  poolparty-32.bat  poolparty-64.bat  poolparty.sh  poolparty.sln  poolparty.vcxproj  pools.cpp  ravencoin.bat  (+2 more)
compat/: ccminer-config.h
quark/: cuda_bmw512.cu  cuda_bmw512_80.cu  cuda_jh512_80.cu  cuda_quark_blake512.cu  cuda_quark_blake512_80.cu  cuda_quark_blake512_sp.cuh  cuda_quark_bmw512.cu  cuda_quark_bmw512_80.cu  cuda_quark_compactionTest.cu  cuda_quark_groestl512.cu  cuda_quark_groestl512_80.cu  cuda_quark_jh512.cu  cuda_quark_jh512_80.cu  cuda_quark_keccak512.cu  cuda_quark_keccak512_80.cu  cuda_quark_keccak512_alexis.cu  cuda_quark_skein512.cu  cuda_quark_skein512_80.cu  cuda_skein512_80.cu  groestl_functions_quad_80.cuh  groestl_transf_quad_80.cuh
qubit/: cuda_qubit_luffa512.cu  cuda_qubit_luffa512_80.cu  qubit_luffa512.cu  qubit_luffa512_alexis.cu
res/: ccminer.rc  poolparty.rc
sph/: sha2.c
tribus/: cuda_echo512_aes.cuh
x11/: cuda_x11_aes.cuh  cuda_x11_aes_alexis.cuh  cuda_x11_cubehash512.cu  cuda_x11_cubehash512_80.cu  cuda_x11_cubehash512_alexis.cu  cuda_x11_echo.cu  cuda_x11_echo512.cu  cuda_x11_echo_alexis.cu  cuda_x11_shavite512.cu  cuda_x11_shavite512_80.cu  cuda_x11_shavite512_alexis.cu  cuda_x11_simd512.cu  cuda_x11_simd512_alexis.cu  cuda_x11_simd512_func_alexis.cuh
x13/: cuda_x13_fugue512.cu  cuda_x13_fugue512_alexis.cu  cuda_x13_hamsi512.cu  cuda_x13_hamsi512_80.cu  cuda_x13_hamsi512_alexis.cu
x15/: cuda_x14_shabal512.cu  cuda_x14_shabal512_alexis.cu  cuda_x15_whirlpool.cu  cuda_x15_whirlpool_80.cu  cuda_x15_whirlpool_alexis.cu  cuda_x15_whirlpool_midstate.cu  cuda_x15_whirlpool_sm3.cu
x16r/: cuda_x16_echo512.cu  cuda_x16_echo512_80.cu  cuda_x16_fugue512_80.cu  cuda_x16_shabal512_80.cu  cuda_x16_simd512_80.cu  cuda_x16r.h  x16r.cu
x17/: cuda_x17_sha512.cu  cuda_x17_sha512_80.cu  cuda_x17_sha512_alexis.cu
